# basicpyqt5example

./: .gitignore  .travis.yml  README.rst  appveyor.yml  pyinstaller.spec  requirements.build  requirements.test  requirements.txt  setup.cfg  setup.py  tox.ini
src/basicpyqt5example/: __main__.py  mainwindow.py  mainwindow.ui  systeminfo.py  systeminfo.ui  uiimporthook.py
src/basicpyqt5example/tests/: test_misc.py
