[metadata]
name = basicpyqt5example
author = Kyle Altendorf
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers

[options]
include_package_data = True
install_requires =
    pyqt5
packages = find:
    src
package_dir =
    = src


[options.extras_require]
test =
    pytest
    pytest-qt
    pytest-faulthandler
    pytest-xvfb
    tox
dev =
    gitignoreio
build =
    pyinstaller

[entry_points]
gui_scripts =
    basicpyqt5example = basicpyqt5example.__main__:main
